[package]
name = "netloc"
version = "0.1.0"
description = "Detect IP address and report it."
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
license = "MIT"

[dependencies]
netloc-core = { version = "0.1", path = "./netloc-core" }
netloc-stdout = { version = "0.1", path = "./netloc-stdout" }
netloc-discord = { version = "0.1", path = "./netloc-discord" }
anyhow = "1"
async-trait = "0.1"
parse_duration = "2"
reqwest = "0.11"
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[workspace]
members = ["./netloc-core", "./netloc-discord", "./netloc-stdout"]
