[package]
name = "netloc"
version = "0.1.8"
description = "Detect IP address and report it."
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/MOZGIII/netloc"

[dependencies]
netloc-core = { version = "0.1", path = "./netloc-core" }
netloc-stdout = { version = "0.1", path = "./netloc-stdout" }
netloc-discord = { version = "0.2", path = "./netloc-discord" }
netloc-http-request = { version = "0.1", path = "./netloc-http-request" }
anyhow = "1"
async-trait = "0.1"
bytes = "1"
dns-lookup = "1"
hyper = { version = "0.14", features = ["client", "tcp", "http1", "http2"] }
hyper-system-resolver = "0.4"
hyper-tls = "0.5"
parse_duration = "2"
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[target."cfg(windows)".dependencies]
winapi = { version = "^0.3", default-features = false, features = ["ws2def"] }

[target."cfg(unix)".dependencies]
libc = { version = "^0.2" }

[workspace]
members = [
  "./netloc-core",
  "./netloc-discord",
  "./netloc-stdout",
  "./netloc-http-request",
]
