[package]
name = "netloc-discord"
version = "0.1.0"
description = "Report an IP address update to Discord."
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
license = "MIT"

[dependencies]
netloc-core = { version = "0.1", path = "../netloc-core" }
async-trait = "0.1"
tokio = "1"
webhook = "1"
anyhow = "1"
