[package]
name = "netloc-discord"
version = "0.2.0"
description = "Report an IP address update to Discord."
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
license = "MIT"

[dependencies]
netloc-core = { version = "0.1", path = "../netloc-core" }
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = "1"
